fix whitespace

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -6,8 +6,10 @@
     h2 {
         font-size: 1.3em;
     }
+}
 
-    code {
-        white-space: pre-line;
-    }
+.git-info {
+    margin-top: 2em;
+    text-align: right;
+    color: #aaaaaa;
 }
